<resources>
    <string name="app_name">MusCool</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act2">Act2</string>
    <string name="title_activity_settings">Settings</string>

    <string name="Reset_ad">Reset Settings</string>
    <string name="message_ad">Are you sure you want to bring all settings to default values</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ChangesYes">Changes are aplied</string>
    <string name="ChangesNO">Changes are not aplied</string>

    <string name="list_sort">Sort by</string>
    <string-array name="sort">sortby
        <item name="Date">Date</item>
        <item>Name</item>
        <item>Random</item>
        <item>Length</item>
        <item>Rating</item>
    </string-array>


    <string name="apname">MusCool</string>
    <string name="copyright">Chesnokov Yaroslav, 2017</string>
    <string name="alert">Are you sure you want to bring all settings to default values?</string>
    <string name="about">MusCool is music player made by Chesnokov Yaroslav, student of Samara State University</string>
    <string name="Artist">Artist</string>
    <string name="Album">Album</string>
    <string name="Track">Track</string>
    <string name="title_activity_splash_screen">Track</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_basic">Basic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="download_images">Download album covers from internet</string>
    <string name="title_activity_test">activity_test</string>
    <string name="title_activity_tabed_activity">tabed_activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_color">Select color of this button</string>
    <string name="Back">Back</string>
    <string name="reset">Reset all settings</string>
    <string name="Random">Play music in random order</string>
    <string name="Change_info">Change Info</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="default_tab">Select Tab showed by default</string>
    <string name="Favorites">Add to favorites</string>
    <string name="LearnMore">Learn More</string>
    <string name="Delete">Delete</string>
    <string name="Name">Name</string>
    <string name="Info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_word">About</string>
    <string name="Home">Home</string>
    <string name="DontShowOlder">Do not show music older than this date</string>
    <string name="Change">Change</string>
    <string name="title_activity_about">About</string>
    <string name="PlayingMusic">Playing music</string>


</resources>
