<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sound.laba1.SettingsActivity">

    <Button
        android:id="@+id/backbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="sendMessage"
        android:text="@string/Back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/default_tab"
            tools:text="@string/default_tab" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner2"
            android:layout_centerHorizontal="true"
            android:text="Color Change" />

        <Button
            android:id="@+id/bcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView9"
            android:onClick="ColorPick"
            android:text="@string/select_color"
            android:textAlignment="center" />

        <Button
            android:id="@+id/defaultbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bcolor"
            android:onClick="onClick"
            android:text="@string/reset" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch1"
            android:layout_alignParentStart="true">

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/defaultbutton"
            android:layout_centerHorizontal="true"
            android:text="@string/Random"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="257dp" />

        <Button
            android:id="@+id/button666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/switch1"
            android:layout_toEndOf="@+id/switch1"
            android:onClick="setDate"
            android:text="@string/Change" />

        <TextView
            android:id="@+id/currentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button666"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch1"
            android:layout_centerHorizontal="true"
            android:text="@string/DontShowOlder" />
    </RelativeLayout>

</RelativeLayout>
